2008-06-05  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document ejabberdctl status code (EJAB-633)
	* doc/guide.html: Likewise

2008-06-04  Badlop  <badlop@process-one.net>

	* src/msgs/pl.msg: Bugfix in arguments of translated string that
	could crash the room (thanks to Anastasia Gornostaeva)

2008-05-31  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_web.erl (make_xhtml/2): Allow to include
	elements in the HTTP header

	* src/odbc/odbc_queries.erl (del_user_return_password): Return
	password (thanks to Oleg Palij)

2008-05-22  Badlop  <badlop@process-one.net>

	* README: R12 support: remove compilation warning (EJAB-630)

2008-05-19  Badlop  <badlop@process-one.net>

	* doc/guide.html: Updated
	* doc/dev.html: Likewise
	* doc/features.html: Likewise
	* doc/version.tex: Likewise

	* src/ejabberd.hrl: Version is 2.0.x

	* src/configure.ac: R12 support: remove compilation
	warning (EJAB-630)
	* src/configure: Likewise
	* doc/guide.tex: Likewise

	* doc/guide.tex: Describe how to disable registration
	limitation (EJAB-614)

2008-05-16  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_receiver.erl: Don't activate a socket untill its
	receiver process is controlling it (Thanks to Aleksey)

	* src/ejabberd_s2s_out.erl: Change FSMTIMEOUT to 30s

2008-05-12  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Return Forbidden error message
	when user sends private message in a room that disallows
	it (EJAB-595)

	* src/web/ejabberd_http.erl (parse_auth): Allow password that
	include colon character (EJAB-622)

2008-04-30  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_caps.erl: XEP-0115 patch (EJAB-618)

2008-04-29  Badlop  <badlop@process-one.net>

	* src/ejabberd_s2s_out.erl: Improve confusing log message in s2s
	connection: wait_for_validation connect timeout (EJAB-617)

	* src/ejabberd.cfg.example: Small improvements in explanations

	* doc/guide.tex: Document MUC room options (EJAB-619)
