@@ -125,7 +125,7 @@ Moreover, \ejabberd{} comes with a wide range of other state-of-the-art features
 \item IPv6 support both for c2s and s2s connections.
 \item \txepref{0045}{Multi-User Chat} module with support for clustering and HTML logging. %%\improved{}
 \item Users Directory based on users vCards.
-\item \txepref{0060}{Publish-Subscribe} component with support for \txepref{00163}{Personal Eventing via Pubsub}.
+\item \txepref{0060}{Publish-Subscribe} component with support for \txepref{0163}{Personal Eventing via Pubsub}.
 \item Support for web clients: \txepref{0025}{HTTP Polling} and \txepref{0206}{HTTP Binding (BOSH)} services.
 \item IRC transport.
 \item Component support: interface with networks such as AIM, ICQ and MSN installing special tranports.
